// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test should match snapshot 1`] = `
<div>
  <div>
    Route
    
    
  </div>
</div>
`;

exports[`Test should match snapshot 2`] = `
<div>
  <div>
    Route
    
    
  </div>
</div>
`;

exports[`Test should match snapshot 3`] = `
<div>
  <div>
    
    <div>
      Param id: 41
      Foobar2
      
    </div>
    
  </div>
</div>
`;

exports[`Test should match snapshot 4`] = `
<div>
  <div>
    
    <div>
      Param id: 42
      Foobar2
      Match
    </div>
    
  </div>
</div>
`;

exports[`Test should match snapshot 5`] = `
<div>
  <div>
    
    
    Fallback
  </div>
</div>
`;
